examples/assignment2/type-error/13.j
/* Test the following:
 *  - type error: use null for a non-nullable type (Int)
 **/

class Another_Main {
    Void main(Void void_fml, String sTR) {
        Surface sur;
        println(null);
        sur.replace(sur, null, null);
    }

}

class Surface {
    Bool needToTransform;
    Void transform() {
        Surface s;
        Int i;
        Void v;
        s = contain(v);

        while (((((!needToTransform))))) {
            return;
        }
    }

    Surface contain(Void nothing) {
        return this;
    }

    Void replace(Surface another, String s, Int i) {
        String a;
        a = null;
    }
}
